Istio/Helloworld/Gateway.yaml
apiVersion: v1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "url"
    istio: ingressgateway
